--- a/flexbox/0-style.css
+++ b/flexbox/0-style.css
@@ -1,4 +1,3 @@
-
 /* SUMMARY
     1. GLOBAL
     2. LAYOUT
@@ -181,15 +180,17 @@
   /* Grid
       ============================= */
   
+  .row {
+        display: flex;
+      }
   ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
-    display: flex;
   }
+
   
   [class*='col-'] {
-    
     padding: 0.5rem;
   }
   
