--- a/flexbox totu/flexbox/0-style.css
+++ b/flexbox totu/flexbox/0-style.css
@@ -179,14 +179,14 @@
   
   /* Grid
       ============================= */
-  .section-body {
-    display: flex;
+  .row {
+    display: flex
   }
   ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
-    
+
 
   }
   
