--- a/flexbox/0-style.css
+++ b/flexbox/0-style.css
@@ -179,13 +179,12 @@
   
   /* Grid
       ============================= */
-  .row {
-    display: flex
-  }
+
   ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
 
 
   }
