--- a/flexbox/0-style.css
+++ b/flexbox/0-style.css
@@ -179,9 +179,6 @@
   
   /* Grid
       ============================= */
-ul  {
-  display: flex;
-}
   ul.row {
     margin: 0;
     padding: 0;
@@ -203,6 +200,9 @@ ul  {
   .col-1-2 {
     width: 50%;
   }
+.row {
+  display: flex;
+}
   
   /* Navbar
       ============================= */
