my task0 project

--- a/flexbox/0-style.css
+++ b/flexbox/0-style.css
@@ -182,6 +182,7 @@
       ============================= */
   
   .section-body {
+   border: 2 px solid black;
     display: flex;
   }    
   ul.row {
