--- a/flexbox/0-style.css
+++ b/flexbox/0-style.css
@@ -182,7 +182,6 @@
       ============================= */
   
   .section-body {
-   border: 2 px solid black;
     display: flex;
   }    
   ul.row {
@@ -372,7 +371,11 @@
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
   }
-  
+
+  /* Section Latest news ============================= */
+  .section-body {
+    flex-direction: row-reverse;
+  }
   /*** 4. CARD ***/
   
   /* Card (all styles)
