--- a/flexbox/1-styles.css
+++ b/flexbox/1-styles.css
@@ -62,11 +62,7 @@
   
     /** HEADER **/
     --header-padding: 4rem 0 0;
-    --header-logo-position: relative;
-    --header-logo-link-display: inline-block;
-    --header-logo-link-position: absolute;
-    --header-logo-link-top: -1rem;
-    --header-logo-link-left: 0;
+    
   
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
@@ -77,7 +73,7 @@
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: .04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 2rem 0 0;
+    --nav-item-margin: 0 0 0 2rem;
     --nav-item-link-hover: var(--color-white);
   
     /** BUTTON **/
@@ -185,29 +181,28 @@
     display: flex;
   }    
   ul.row {
-    margin: 0;
+    margin: 1rem;
     padding: 0;
     list-style: none;
   }
   
   
   [class*='col-'] {
-    padding: 0.5rem;
+    margin: 1rem;
   }
   
   .col-1-3 {
-    width: 33.33%;
+    width: calc((100% / 3) - 2rem);
   }
   
   .col-1-2 {
-    width: 50%;
+    width: calc((100% / 2) - 2rem);
   }
   
   /* Navbar
       ============================= */
-  
   .navbar-menu {
-    float: right;
+    margin: var(--nav-item-margin);
   }
   
   .nav {
@@ -215,6 +210,7 @@
     padding: 0;
     list-style: none;
     text-align: center;
+    display: flex;
   }
   
   .nav .nav-item {
@@ -222,8 +218,7 @@
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
     letter-spacing: var(--nav-item-letter-spacing);
-    display: var(--nav-item-display);
-    margin: var(--nav-item-margin);
+    
   }
   
   .nav .nav-link {
@@ -256,6 +251,10 @@
   /* Header
       ============================= */
   
+  .container {
+    display: flex;
+    justify-content: space-between;
+  }
   .header {
     padding: var(--header-padding);
          position: relative;
@@ -263,16 +262,7 @@
          background: transparent;
   }
   
-  .header-logo {
-    position: var(--header-logo-position);
-  }
   
-  .header-logo a {
-    display: var(--header-logo-link-display);
-    position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
-  }
   
   /* Footer
       ============================= */
@@ -371,7 +361,12 @@
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
   }
-  
+
+  /* Section-latest-news ======================== */ 
+  .section-body {
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+  }
   /*** 4. CARD ***/
   
   /* Card (all styles)
