--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -362,7 +362,7 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-  /* Section-latest-news ======================== */ 
+  /* Section Latest news ============================= */
   .row {
     flex-direction: row-reverse;
     flex-wrap: wrap;
