--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -362,8 +362,8 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-  /* Section Latest news ============================= */
-  .section-body {
+  /* Section-latest-news ======================== */ 
+  .section-latest-news {
     flex-direction: row-reverse;
     flex-wrap: wrap;
   }
