--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -362,10 +362,10 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-  /* Section-latest-news ======================== */ 
-  .section-latest-news {
+  
+  /* Section Latest news ============================= */
+  .section-latest-news .row {
     flex-direction: row-reverse;
-    flex-wrap: wrap;
   }
   /*** 4. CARD ***/
   
