--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -361,8 +361,7 @@
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
   }
-
-  /* Section-latest-news ======================== */ 
+/* Section Latest news ============================= */
   .section-latest-news .row {
     flex-direction: row-reverse;
     flex-wrap: wrap;
