--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -202,13 +202,15 @@
   /* Navbar
       ============================= */
   
-  .nav {
-    margin: 0;
+  .nav { 
     padding: 0;
     list-style: none;
     text-align: center;
     display: flex;
   }
+  .nav .nav-item +.nav-item {
+    margin: 0;
+  } 
   
   .nav .nav-item {
     font-family: var(--nav-item-font-family);
