--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -208,7 +208,7 @@
     text-align: center;
     display: flex;
   }
-  .nav .nav-item +.nav-item {
+   .nav-item +.nav-item .nav {
     margin: 0;
   } 
   
