--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -203,13 +203,14 @@
       ============================= */
   
   .nav { 
+    margin: 0;
     padding: 0;
     list-style: none;
     text-align: center;
     display: flex;
   }
    .nav .nav-item + .nav-item {
-    margin: 0;
+    margin: var(--nav-item-margin);
   } 
   
   .nav .nav-item {
